codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_idle_h3.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 2434
expression: normalized_backend_snapshot(terminal.backend())
---
"                                        "
"────────────────────────────────────────"
"────────────────────────────────────────"
